--- a/styles/main.css
+++ b/styles/main.css
@@ -79,3 +79,13 @@ body {
         font-size: 120%;
     }
 }
+
+.clearfix::before,
+.clearfix::after {
+    content: " ";
+    display: table;
+}
+
+.clearfix::after {
+    clear: both;
+}
