--- a/styles/landing.css
+++ b/styles/landing.css
@@ -47,12 +47,25 @@ body.landing {
     padding: 2rem;
     text-align: center;
     opacity: 0;
-    -webkit-transform: scaleX(0.9) translateY(3rem);
-    -moz-transform: scalex(0.9) translateY(3rem);
-    transform: scaleX(0.9) translateY(3rem);
+    -webkit-transform: scaleX(0.9) scaleY(0.9) translateY(3rem);
+    -moz-transform: scalex(0.9) scaleY(0.9) translateY(3rem);
+    transform: scaleX(0.9) scaleY(0.9) translateY(3rem);
     -webkit-transition: all 0.25s ease-in-out;
     -moz-transition: all 0.25s ease-in-out;
     transition: all 0.25s ease-in-out;
+    -webkit-transition-delay: 0.2s;
+    -moz-transition-delay: 0.2s;
+    transition-delay: 0.2s;
+}
+
+.point:hover {
+    opacity: 1;
+    -webkit-transform: scaleX(1.1) scaleY(1.1);
+    -moz-transform: scaleX(1.1) scaleY(1.1);
+    transform: scaleX(1.1) scaleY(1.1);
+    -webkit-transition: all 0.25s linear;
+    -moz-transition: all 0.25s linear;
+    transition: all 0.25s linear;
     -webkit-transition-delay: 0.2s;
     -moz-transition-delay: 0.2s;
     transition-delay: 0.2s;
